--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.vscode
 app/.DS_Store
 app/application/cache/*
 app/!application/cache/index.html
@@ -32,7 +33,8 @@ app/tests/tests/
 app/tests/results/
 
 ## Project
-app/public/installer/*
+app/public/installer/
+app/public/installer_scripts.json
 test.drawio
 
 # envs
